[package]
name = "Rastreio"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.5", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
dotenvy = "0.15.7"
